--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,26 @@
           box-sizing: border-box;
 }
 
+body {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 .navbar {
   height: 80px;
   width: 100vw;
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  padding: 0 10vw;
+  padding: 0 5vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border-top: 5px solid #4793A3;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .navbar .navbar-brand {
@@ -31,9 +39,79 @@
 .navbar .nav-list {
   height: 80px;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .navbar .nav-list .nav-item {
   line-height: 80px;
+}
+
+.navbar .nav-list .nav-item:not(:last-of-type) {
+  margin-right: 1.5em;
+}
+
+.navbar .nav-list .nav-item .nav-link {
+  text-decoration: none;
+  color: #333333;
+  font-size: .85rem;
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-transition: color .3s ease-in-out;
+  transition: color .3s ease-in-out;
+}
+
+.navbar .nav-list .nav-item .nav-link:hover {
+  color: #4793A3;
+}
+
+.navbar .nav-list .nav-item .nav-link.active {
+  color: #4793A3;
+  cursor: default;
+}
+
+.home-header {
+  height: 70vh;
+  margin-top: 80px;
+  background: url("../img/Header Background.png") center/cover no-repeat;
+}
+
+.home-header .text-container {
+  height: 50vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.home-header .text-container .small-heading {
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #333333;
+  font-size: 1.25rem;
+  margin-bottom: .5em;
+}
+
+.home-header .text-container .small-heading .blue {
+  color: #4793A3;
+  font-weight: bold;
+}
+
+.home-header .text-container .big-heading {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 6rem;
+  -webkit-transform: scale(1, 1.25);
+          transform: scale(1, 1.25);
+  color: #333333;
+}
+
+.home-header .text-container .big-heading.primary {
+  color: #4793A3;
+  position: relative;
+  top: -10px;
 }
 /*# sourceMappingURL=main.css.map */
