--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
+  background: #4793A3;
 }
 
 .navbar {
@@ -14,6 +15,7 @@ body {
   width: 100vw;
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background: #fff;
   padding: 0 5vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -74,6 +76,8 @@ body {
 .home-header {
   height: 70vh;
   margin-top: 80px;
+  width: 100vw;
+  position: relative;
   background: url("../img/Header Background.png") center/cover no-repeat;
 }
 
@@ -113,5 +117,41 @@ body {
   color: #4793A3;
   position: relative;
   top: -10px;
+}
+
+.home-header .text-container .btn {
+  position: relative;
+  top: 1em;
+}
+
+.home-header .camera {
+  position: absolute;
+  bottom: -50px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 175px;
+}
+
+.btn {
+  padding: 8px 24px;
+  border-radius: 20px;
+  text-decoration: none;
+  -webkit-transition: .33s ease-in-out;
+  transition: .33s ease-in-out;
+  border: 2px solid;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: .75rem;
+}
+
+.btn.primary {
+  border-color: #4793A3;
+  color: #4793A3;
+}
+
+.btn.primary:hover {
+  background: #4793A3;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
