--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $primary: #4793A3;
 
 body {
     font-family: Helvetica, Arial, sans-serif;
+    background: $primary;
 }
 
 //////// NAVBAR STYLES ////////
@@ -18,6 +19,7 @@ body {
     height: 80px;
     width: 100vw;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    background: #fff;
     padding: 0 5vw;
     display:flex;
     justify-content: space-between;
@@ -72,6 +74,8 @@ body {
 .home-header {
     height: 70vh;
     margin-top: 80px;
+    width: 100vw;
+    position:relative;
     background: url('../img/Header Background.png') center/cover no-repeat;
 
     .text-container {
@@ -108,7 +112,41 @@ body {
                 top: -10px;
             }
         }
+
+        .btn {
+            position:relative;
+            top: 1em;
+        }
+    }
+
+    .camera {
+        position:absolute;
+        bottom: -50px;
+        left:50%;
+        transform: translateX(-50%);
+        width: 175px;
     }
 }
 
 //////// BUTTON STYLES ////////
+
+.btn {
+    padding: 8px 24px;
+    border-radius: 20px;
+    text-decoration: none;
+    transition: .33s ease-in-out;
+    border: 2px solid;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: .75rem;
+
+    &.primary {
+        border-color: $primary;
+        color: $primary;
+
+        &:hover {
+            background: $primary;
+            color: #fff;
+        }
+    }
+}
