--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ body {
 .navbar {
     height: 80px;
     width: 100vw;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.15);
     background: #fff;
     padding: 0 5vw;
     display:flex;
@@ -27,6 +27,7 @@ body {
     position:fixed;
     top:0;
     left: 0;
+    z-index: 1;
 
     .navbar-brand {
         width: 100px;
@@ -76,7 +77,7 @@ body {
     margin-top: 80px;
     width: 100vw;
     position:relative;
-    background: url('../img/Header Background.png') center/cover no-repeat;
+    background: url('../img/pattern-bg.png') center/cover no-repeat;
 
     .text-container {
         height: 50vh;
@@ -148,5 +149,22 @@ body {
             background: $primary;
             color: #fff;
         }
+    }
+}
+
+//////// WORK STYLES ////////
+
+.work {
+    padding: 4em 0;
+    background: url('../img/our-work-bg.png') center/cover no-repeat fixed;
+
+    .work-heading {
+        color: #ffffff;
+        text-transform: uppercase;
+        text-align:center;
+        width: 25vw;
+        position: relative;
+        left:50%;
+        transform:translateX(-50%);
     }
 }
