--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   background: #4793A3;
+  overflow-x: hidden;
 }
 
 .navbar {
@@ -157,18 +158,20 @@ body {
 }
 
 .work {
-  padding: 4em 0;
   background: url("../img/our-work-bg.png") center/cover no-repeat fixed;
+  width: 100vw;
+  padding: 6em 0;
 }
 
 .work .work-heading {
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
-  width: 25vw;
+  width: 650px;
   position: relative;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  font-size: 2rem;
 }
 /*# sourceMappingURL=main.css.map */
