--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,19 @@ body {
     overflow-x: hidden;
 }
 
+//////// SCROLLBAR STYLES ////////
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $primary;
+}
+
 //////// NAVBAR STYLES ////////
 
 .navbar {
@@ -103,10 +116,11 @@ body {
 
         .big-heading {
             text-transform: uppercase;
-            font-weight: 800;
+            font-weight: 900;
             font-size: 6rem;
-            transform: scale(1, 1.25);
+            transform: scale(1.2, 1.25);
             color: $darkGrey;
+            letter-spacing: -6px;
 
             &.primary {
                 color: $primary;
