--- a/css/main.scss
+++ b/css/main.scss
@@ -187,6 +187,10 @@ html {
         background: $primary;
         border: none;
         padding: 12px 28px;
+
+        &:hover {
+            background: lighten($primary, 10%);
+        }
     }
 }
 
@@ -345,6 +349,52 @@ html {
             width: 100%;
             position: relative;
             top: -200px;
+        }
+
+    }
+}
+
+//////// CONTACT (HOME) STYLES ////////
+
+.contact-section {
+    background: url('../img/our-work-bg.png') center/cover no-repeat fixed;
+    width: 100vw;
+    padding: 6em 0;
+
+    .title {
+        color: #fff;
+        text-align:center;
+        font-size: 2.25rem;
+        margin-bottom: 1em;
+    }
+
+    .contact-form {
+        width:30vw;
+        margin: 0 auto;
+
+        .form-group {
+            width: 100%;
+            margin: 1.25em 0;
+
+            &.grid {
+                display:grid;
+                grid-template-columns: 1fr 1fr;
+                column-gap: 1.25em;
+            }
+
+            .input {
+                width: 100%;
+                min-height: 45px;
+                padding: 12px;
+                border: none;
+                border-radius: 5px;
+            }
+
+            .btn {
+                position:relative;
+                left:50%;
+                transform:translateX(-50%);
+            }
         }
     }
 }
