--- a/css/main.css
+++ b/css/main.css
@@ -233,74 +233,31 @@ html {
 }
 
 .work .carousel {
-  width: 50vw;
+  width: 80vw;
   position: relative;
-  margin: 1.5em auto 0 auto;
-  height: 50vh;
+  margin: 3em auto 0 auto;
+  height: 40vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .work .carousel .carousel-image {
-  position: absolute;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 50% 50%;
-     object-position: 50% 50%;
-  -webkit-transition: 1s ease-in-out;
-  transition: 1s ease-in-out;
-  border-radius: 5px;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  position: relative;
+  width: calc(0.25 * 50vw);
+  height: calc((0.25 * 50vw) * 1.25);
 }
 
-.work .carousel .carousel-image.image-1 {
-  width: 40%;
-  height: calc((0.4 * 50vw) / 1.5);
-  top: 30%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  z-index: 2;
+.work .carousel .carousel-image:not(:first-of-type) {
+  margin-left: 1.2em;
 }
 
-.work .carousel .carousel-image.image-2, .work .carousel .carousel-image.image-6 {
-  width: 30%;
-  height: calc((0.3 * 50vw) / 1.5);
-  top: 27.5%;
-  opacity: .8;
-  z-index: 1;
-}
-
-.work .carousel .carousel-image.image-2.image-6, .work .carousel .carousel-image.image-6.image-6 {
-  left: 67%;
-}
-
-.work .carousel .carousel-image.image-2.image-2, .work .carousel .carousel-image.image-6.image-2 {
-  left: 20px;
-}
-
-.work .carousel .carousel-image.image-3, .work .carousel .carousel-image.image-5 {
-  width: 15%;
-  height: calc((0.15 * 50vw) / 1.5);
-  top: 22.5%;
-  z-index: 0;
-  opacity: .6;
-}
-
-.work .carousel .carousel-image.image-3.image-5, .work .carousel .carousel-image.image-5.image-5 {
-  left: 60%;
-}
-
-.work .carousel .carousel-image.image-3.image-3, .work .carousel .carousel-image.image-5.image-3 {
-  left: 25%;
-}
-
-.work .carousel .carousel-image.image-4 {
-  width: 8%;
-  height: calc((0.08 * 50vw) / 1.5);
-  top: 22.5%;
-  z-index: 0;
-  opacity: .4;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+.work .carousel .carousel-image:hover {
+  width: calc(0.3 * 50vw);
+  height: calc((0.3 * 50vw) * 1.25);
+  margin-top: -25px;
 }
 
 .work .btn {
