--- a/css/main.css
+++ b/css/main.css
@@ -634,4 +634,100 @@ html {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
 }
+
+.header-w-divider {
+  height: 40vh;
+  margin-top: 80px;
+  background: url("../img/our-work-bg.png") center/cover no-repeat fixed;
+  border-bottom: 2px solid #fff;
+  position: relative;
+}
+
+.header-w-divider .page-title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 3.25rem;
+  color: #fff;
+  letter-spacing: 2px;
+  position: absolute;
+  left: calc(50% + 100px);
+  top: 40%;
+  -webkit-transform: scale(1.2, 1.25) translate(-50%, -50%);
+          transform: scale(1.2, 1.25) translate(-50%, -50%);
+}
+
+.header-w-divider .divider {
+  height: 3.5px;
+  width: 200px;
+  background: #fff;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.header-w-divider .header-img {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: -50px;
+}
+
+.services-section {
+  padding: 15vh 10vw;
+  background: url("../img/2.png") center/cover no-repeat fixed;
+  width: 100vw;
+}
+
+.services-section .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -webkit-column-gap: 1.6em;
+          column-gap: 1.6em;
+}
+
+.services-section .grid .service {
+  background: #fff;
+  padding: 7.5%;
+}
+
+.services-section .grid .service .service-title {
+  text-transform: uppercase;
+  color: #333333;
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.services-section .grid .service .divider {
+  width: 100%;
+  height: 3px;
+  background: #4793A3;
+  margin: 5% 0;
+}
+
+.services-section .grid .service .desc {
+  width: 95%;
+  color: #4d4d4d;
+  line-height: 1.5;
+  margin-bottom: 5%;
+  text-align: center;
+}
+
+.services-section .grid .service .service-img {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.services-section .btn {
+  position: relative;
+  top: 5em;
+  left: 50%;
+  width: 200px;
+  margin-left: -70px;
+}
 /*# sourceMappingURL=main.css.map */
