--- a/css/main.scss
+++ b/css/main.scss
@@ -621,3 +621,97 @@ html {
         transform: translateX(-50%);
     }
 }
+
+//////// HEADER WITH DIVIDER STYLES ////////
+
+.header-w-divider {
+    height: 40vh;
+    margin-top: 80px;
+    background: url('../img/our-work-bg.png') center/cover no-repeat fixed;
+    border-bottom: 2px solid #fff;
+    position:relative;
+
+    .page-title {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 3.25rem;
+        color: #fff;
+        letter-spacing: 2px;
+        position:absolute;
+        left: calc(50% + 100px);
+        top:40%;
+        transform: scale(1.2, 1.25) translate(-50%, -50%);
+    }
+
+    .divider {
+        height: 3.5px;
+        width: 200px;
+        background: #fff;
+        position:absolute;
+        top: 60%;
+        left:50%;
+        transform:translate(-50%, -50%);
+    }
+
+    .header-img {
+        position:absolute;
+        left:50%;
+        transform:translateX(-50%);
+        bottom: -50px;
+    }
+}
+
+//////// SERVICES SECTION (SERVICES) STYLES ////////
+
+.services-section {
+    padding: 15vh 10vw;
+    background: url('../img/2.png') center/cover no-repeat fixed;
+    width: 100vw;
+
+    .grid {
+        display:grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 1.6em;
+
+        .service {
+            background: #fff;
+            padding: 7.5%;
+
+            .service-title {
+                text-transform: uppercase;
+                color: $darkGrey;
+                letter-spacing: 2px;
+                font-size: 1.5rem;
+                text-align:center;
+            }
+
+            .divider {
+                width: 100%;
+                height: 3px;
+                background: $primary;
+                margin: 5% 0;
+            }
+
+            .desc {
+                width: 95%;
+                color: lighten($darkGrey, 10%);
+                line-height: 1.5;
+                margin-bottom: 5%;
+                text-align:center;
+            }
+
+            .service-img {
+                width: 100%;
+                margin: 0 auto;
+            }
+        }
+    }
+
+    .btn {
+        position:relative;
+        top: 5em;
+        left: 50%;
+        width: 200px;
+        margin-left: -70px;
+    }
+}
